# bodhi

./: .env.example  .gitignore  README.md  docker-compose.dev.yml  docker-compose.yml  pyproject.toml  pytest.ini  requirements-dev.txt
.github/agents/: code-auditor.agent.md  game-ux-designer.agent.md  rpi-companion-architect.agent.md
client/: index.html  overlay.html  package-lock.json  package.json  vite.config.ts
client/src/: App.tsx  overlay.tsx
client/src-tauri/: Cargo.toml  tauri.conf.json
client/src-tauri/capabilities/: default.json
client/src-tauri/src/: lib.rs
config/: qdrant.yaml
docs/: ARCHITECTURE_DECISIONS.md  ARCHITECTURE_DIAGRAMS.md  CENTRAL_AGENT_DESIGN.md  CHARACTER_ANIMATION_SYSTEM.md  MEMORY_CONSOLIDATION_DESIGN.md  MODULE_ACTIVATION_STRATEGY.md  SCREEN_AWARENESS_PIPELINE.md  SESSION_PROGRESS.md  SETUP.md  SKILL_TREE_DESIGN.md  SUB_AGENT_DESIGNS.md  SYSTEM_INTEGRATION.md  TOOL_PLUGIN_SYSTEM.md  VOICE_PIPELINE.md
infra/init-db/: neo4j.cypher  postgres.sql
monitoring/: alerts.yml  loki.yml  prometheus.yml  promtail.yml
monitoring/grafana-dashboards/: dashboards.yml
protos/: companion.proto
scripts/: backup.sh  lint.sh  setup.sh  update.sh
services/central-agent/: .dockerignore  main.py  metrics.py  requirements.txt
services/emotion-regulator/: .dockerignore  main.py  metrics.py  requirements.txt
services/language-center/: .dockerignore  main.py  metrics.py  requirements.txt  templates.py
services/memory-manager/: .dockerignore  main.py  metrics.py  requirements.txt
tests/: conftest.py  requirements-test.txt
(+69 files in other folders)
